--- a/Astro/Controllers/APODFeed/Cells/APODEntryCell/APODTableViewCell.xib
+++ b/Astro/Controllers/APODFeed/Cells/APODEntryCell/APODTableViewCell.xib
@@ -9,85 +9,86 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APODTableViewCell" rowHeight="372" id="KGk-i7-Jjw" customClass="APODTableViewCell" customModule="Astro" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APODTableViewCell" id="KGk-i7-Jjw" customClass="APODTableViewCell" customModule="Astro" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="351" height="504"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
+                <rect key="frame" x="0.0" y="0.0" width="351" height="504"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="web-5Y-Tzr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-BE-rw8">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="v8H-Ey-ekI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GQm-Km-hCn">
-                                <rect key="frame" x="0.0" y="50" width="320" height="182"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explanation" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BD2-0z-Omc">
-                                <rect key="frame" x="0.0" y="232" width="320" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" identifier="height" id="CUV-nV-KfA"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAY-EH-lN3" userLabel="Button Container">
-                                <rect key="frame" x="0.0" y="352" width="320" height="20"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6J-lf-kqI">
-                                        <rect key="frame" x="150" y="0.0" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="aMl-k4-E4i"/>
-                                            <constraint firstAttribute="height" constant="20" id="mLE-f5-V14"/>
-                                        </constraints>
-                                        <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button" image="down-arrow"/>
-                                        <connections>
-                                            <action selector="expandButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="XhE-BW-LE7"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstItem="O6J-lf-kqI" firstAttribute="centerX" secondItem="EAY-EH-lN3" secondAttribute="centerX" id="4jd-Cn-e89"/>
-                                    <constraint firstItem="O6J-lf-kqI" firstAttribute="top" secondItem="EAY-EH-lN3" secondAttribute="top" id="5vc-Ed-YWR"/>
-                                    <constraint firstAttribute="height" constant="20" id="KMb-Ah-YsG"/>
-                                </constraints>
-                            </view>
-                        </subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GQm-Km-hCn">
+                        <rect key="frame" x="0.0" y="50" width="351" height="300"/>
                         <constraints>
-                            <constraint firstItem="GQm-Km-hCn" firstAttribute="leading" secondItem="web-5Y-Tzr" secondAttribute="leading" id="CfZ-SE-YwG"/>
-                            <constraint firstAttribute="trailing" secondItem="GQm-Km-hCn" secondAttribute="trailing" id="E4A-j6-Ch6"/>
-                            <constraint firstItem="GQm-Km-hCn" firstAttribute="top" secondItem="yIe-BE-rw8" secondAttribute="bottom" id="i2k-lP-LRR"/>
+                            <constraint firstAttribute="height" constant="300" id="ckS-p1-a5C"/>
                         </constraints>
-                    </stackView>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-BE-rw8">
+                        <rect key="frame" x="0.0" y="0.0" width="351" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="Nhp-gW-FKX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explanation" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BD2-0z-Omc">
+                        <rect key="frame" x="0.0" y="350" width="351" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="120" id="jDU-p3-gtR"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAY-EH-lN3" userLabel="Button Container">
+                        <rect key="frame" x="0.0" y="470" width="351" height="20"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6J-lf-kqI">
+                                <rect key="frame" x="165.5" y="0.0" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="7tk-2K-PT8"/>
+                                    <constraint firstAttribute="height" constant="20" id="GWb-fH-AjT"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button" image="down-arrow"/>
+                                <connections>
+                                    <action selector="expandButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="XhE-BW-LE7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="O6J-lf-kqI" firstAttribute="centerX" secondItem="EAY-EH-lN3" secondAttribute="centerX" id="29M-UX-9MH"/>
+                            <constraint firstItem="O6J-lf-kqI" firstAttribute="top" secondItem="EAY-EH-lN3" secondAttribute="top" id="JcU-xi-zst"/>
+                            <constraint firstAttribute="height" constant="20" id="WKF-aA-gNU"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="web-5Y-Tzr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Nnu-yC-nYS"/>
-                    <constraint firstItem="web-5Y-Tzr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bFo-5W-V7k"/>
-                    <constraint firstAttribute="bottom" secondItem="web-5Y-Tzr" secondAttribute="bottom" id="cpN-DF-jyG"/>
-                    <constraint firstAttribute="trailing" secondItem="web-5Y-Tzr" secondAttribute="trailing" id="s4D-5m-h2v"/>
+                    <constraint firstItem="BD2-0z-Omc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="0f9-EN-1ph"/>
+                    <constraint firstItem="EAY-EH-lN3" firstAttribute="top" secondItem="BD2-0z-Omc" secondAttribute="bottom" id="2GY-1T-GPl"/>
+                    <constraint firstAttribute="trailing" secondItem="yIe-BE-rw8" secondAttribute="trailing" id="4bQ-Tb-emS"/>
+                    <constraint firstItem="GQm-Km-hCn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7yU-xC-i0Z"/>
+                    <constraint firstAttribute="trailing" secondItem="EAY-EH-lN3" secondAttribute="trailing" id="Cpm-gp-xma"/>
+                    <constraint firstItem="yIe-BE-rw8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="D6B-3O-ClV"/>
+                    <constraint firstItem="EAY-EH-lN3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Es5-Di-Gt0"/>
+                    <constraint firstItem="yIe-BE-rw8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="H09-HN-afn"/>
+                    <constraint firstItem="GQm-Km-hCn" firstAttribute="top" secondItem="yIe-BE-rw8" secondAttribute="bottom" id="ldd-mH-FA7"/>
+                    <constraint firstAttribute="trailing" secondItem="BD2-0z-Omc" secondAttribute="trailing" id="stu-Bz-5Rc"/>
+                    <constraint firstAttribute="trailing" secondItem="GQm-Km-hCn" secondAttribute="trailing" id="ueG-AT-n0p"/>
+                    <constraint firstItem="BD2-0z-Omc" firstAttribute="top" secondItem="GQm-Km-hCn" secondAttribute="bottom" id="xDO-4b-xlU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="APODImageView" destination="GQm-Km-hCn" id="3tw-DW-aGI"/>
+                <outlet property="APODImageViewHeightConstraint" destination="ckS-p1-a5C" id="l1y-z6-vBQ"/>
                 <outlet property="expandButton" destination="O6J-lf-kqI" id="Tlm-vx-woS"/>
                 <outlet property="expandButtonView" destination="EAY-EH-lN3" id="MUT-Yn-xWg"/>
-                <outlet property="explanationHeight" destination="CUV-nV-KfA" id="Qwh-11-EW3"/>
                 <outlet property="explanationLabel" destination="BD2-0z-Omc" id="vRj-4v-fEJ"/>
                 <outlet property="titleLabel" destination="yIe-BE-rw8" id="dQy-RZ-Fcg"/>
             </connections>
-            <point key="canvasLocation" x="140.57971014492756" y="213.61607142857142"/>
+            <point key="canvasLocation" x="163.04347826086959" y="257.8125"/>
         </tableViewCell>
     </objects>
     <resources>
